--- a/articles/mariadb/TOC.yml
+++ b/articles/mariadb/TOC.yml
@@ -45,6 +45,8 @@
       href: concepts-firewall-rules.md
     - name: Configuring SSL
       href: concepts-ssl-connection-security.md
+    - name: VNet
+      href: concepts-data-access-and-security-vnet.md 
   - name: Business continuity
     items:
     - name: Overview
