Added top-level overview for Blobs/ADLS

--- a/articles/storage/TOC.yml
+++ b/articles/storage/TOC.yml
@@ -1,6 +1,7 @@
 - name: Azure Storage Documentation
   href: index.yml
 - name: Overview
+  expanded: true
   items:
   - name: Introduction
     href: ./common/storage-introduction.md
