--- a/articles/virtual-machines/troubleshooting/toc.yml
+++ b/articles/virtual-machines/troubleshooting/toc.yml
@@ -16,6 +16,8 @@
     href: detailed-troubleshoot-rdp.md
   - name: Troubleshoot RDP error because the DHCP is disabled
     href: troubleshoot-rdp-dhcp-disabled.md
+  - name: Troubleshoot RDP error because of the NSG setting
+    href: troubleshoot-rdp-nsg-problem.md
   - name: Troubleshoot specific errors
     href: troubleshoot-specific-rdp-errors.md
   - name: Troubleshoot no license server errors
