--- a/articles/active-directory/devices/TOC.yml
+++ b/articles/active-directory/devices/TOC.yml
@@ -17,6 +17,11 @@
     href: hybrid-azuread-join-manual-steps.md
   - name: Configure Azure AD join during Windows 10 first-run experience
     href: azuread-joined-devices-frx.md
+- name: Concepts
+  expanded: false
+  items:
+  - name: SSO to on-premises resources
+    href: azuread-join-sso.md
 - name: How-to guides
   expanded: true
   items:
@@ -24,7 +29,7 @@
     href: device-management-azure-portal.md
   - name: Manage stale devices
     href: manage-stale-devices.md
-  - name: Plan Azure AD join
+  - name: Plan your Azure AD join implementation
     href: azureadjoin-plan.md
   - name: Plan your hybrid Azure AD join implementation
     href: hybrid-azuread-join-plan.md
