--- a/articles/active-directory/reports-monitoring/toc.yml
+++ b/articles/active-directory/reports-monitoring/toc.yml
@@ -71,6 +71,8 @@
     items:
     - name: Find activity reports
       href: howto-find-activity-reports.md
+    - name: Troubleshoot sign-in errors for a user
+      href: howto-troubleshoot-sign-in-errors.md
     - name: Remediate users flagged for risk
       href: howto-remediate-users-flagged-for-risk.md
     - name: Use Power BI Content Pack for Azure AD reports
