--- a/articles/storage/blobs/TOC.yml
+++ b/articles/storage/blobs/TOC.yml
@@ -1,14 +1,15 @@
 - name: Azure Storage Documentation
   href: /azure/storage/
-- name: Overview of Azure Blob storage
+- name: Overview
+  expanded: true
   items:
   - name: What is Azure Blob storage?
     href: storage-blobs-overview.md
-- name: Blob storage for text and binary data
+- name: Blob storage
   items:
   - name: Overview
     items:
-    - name: Blob storage for text and binary data
+    - name: Introduction to Blob storage
       href: storage-blobs-introduction.md
   - name: Quickstarts
     items:
@@ -645,7 +646,7 @@
       href: /azure/data-lake-store/
     - name: Overview
       items:
-      - name: Introduction
+      - name: Introduction to Data Lake Storage
         href: ../data-lake-storage/introduction.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
       - name: Processing big data
         href: ../data-lake-storage/data-scenarios.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
