--- a/articles/virtual-machines/troubleshooting/toc.yml
+++ b/articles/virtual-machines/troubleshooting/toc.yml
@@ -40,6 +40,8 @@
     href: troubleshoot-rdp-nic-disabled.md
   - name: Troubleshoot RDP errors becauses of Safe Mode
     href: troubleshoot-rdp-safe-mode.md
+  - name: Troubleshoot RDP error becauses of netvsc.sys
+    href: troubleshoot-rdp-driver-netvsc.md
 - name: SSH
   items:
   - name: SSH troubleshooting
