--- a/articles/storage/blobs/TOC.yml
+++ b/articles/storage/blobs/TOC.yml
@@ -1,6 +1,7 @@
 - name: Azure Storage Documentation
   href: /azure/storage/
 - name: Overview
+  expanded: true
   items:
   - name: What is Azure Blob storage?
     href: storage-blobs-overview.md
