--- a/articles/time-series-insights/TOC.yml
+++ b/articles/time-series-insights/TOC.yml
@@ -10,6 +10,12 @@
   items:
   - name: Explore Time Series Insights
     href: time-series-quickstart.md
+
+  - name: v2 Azure Time Series Insights Update
+    items:
+
+
+
 - name: Tutorials
   items:
   - name: Explore TSI JavaScript client library
@@ -33,12 +39,14 @@
           href: time-series-insights-concepts-retention.md
         - name: Diagnose and troubleshoot
           href: time-series-insights-diagnose-and-solve-problems.md
-    - name: Azure Time Series Insights Update
+
+    - name: v2 Azure Time Series Insights Update
       items:
+      - name: Plan your environment
+        href: time-series-insights-update-plan-environment.md
       - name: Data Storage and ingress
         href: time-series-insights-storage-ingress.md
-      - name: Plan your environment
-        href: time-series-insights-plan-environment.md
+
     - name: Develop
       items:
       - name: Authenticate and authorize
@@ -71,12 +79,15 @@
     href: time-series-insights-manage-resources-using-azure-resource-manager-template.md  
   - name: Shape JSON for queries
     href: how-to-shape-query-json.md
-  - name: Azure Time Series Insights Update
+
+  - name: v2 Azure Time Series Insights Update
     items:
       - name: Shaping events
-        href: time-series-insights-how-to-shape-events.md
+        href: time-series-insights-update-how-to-shape-events.md
       - name: Diagnose and troubleshoot
-        href: time-series-insights-how-to-troubleshoot-update.md
+        href: time-series-insights-update-how-to-troubleshoot.md
+
+        
 - name: Reference
   items:
   - name: Query API
