--- a/articles/time-series-insights/TOC.yml
+++ b/articles/time-series-insights/TOC.yml
@@ -11,7 +11,7 @@
   - name: Explore Time Series Insights
     href: time-series-quickstart.md
 
-  - name: v2 Azure Time Series Insights Update
+  - name: Azure Time Series Insights V2 Update
     items:
 
 
@@ -40,7 +40,7 @@
         - name: Diagnose and troubleshoot
           href: time-series-insights-diagnose-and-solve-problems.md
 
-    - name: v2 Azure Time Series Insights Update
+    - name: Azure Time Series Insights V2 Update
       items:
       - name: Plan your environment
         href: time-series-insights-update-plan-environment.md
@@ -80,14 +80,14 @@
   - name: Shape JSON for queries
     href: how-to-shape-query-json.md
 
-  - name: v2 Azure Time Series Insights Update
+  - name: Azure Time Series Insights V2 Update
     items:
       - name: Shaping events
         href: time-series-insights-update-how-to-shape-events.md
       - name: Diagnose and troubleshoot
         href: time-series-insights-update-how-to-troubleshoot.md
 
-        
+
 - name: Reference
   items:
   - name: Query API
