--- a/articles/time-series-insights/TOC.yml
+++ b/articles/time-series-insights/TOC.yml
@@ -10,12 +10,10 @@
   items:
   - name: Explore Time Series Insights
     href: time-series-quickstart.md
-
   - name: Azure Time Series Insights V2 Update
     items:
-
-
-
+    - name: Explore the Azure Time Series Insights V2 Update
+      href: time-series-insights-update-quickstart.md
 - name: Tutorials
   items:
   - name: Explore TSI JavaScript client library
@@ -24,39 +22,48 @@
     href: tutorial-create-populate-tsi-environment.md
   - name: Create a TSI single-page web app
     href: tutorial-create-tsi-sample-spa.md
-
+  - name: Azure Time Series Insights V2 Update
+    items:
+    - name: Create a TSI environment
+      href: time-series-insights-update-create-environment.md
 - name: Concepts
   items:
-    - name: Azure Time Series Insights
-      items:
-        - name: Plan your environment
-          href: time-series-insights-environment-planning.md
-        - name: Visualize data in the explorer
-          href: time-series-insights-explorer.md
-        - name: Mitigate throttling
-          href: time-series-insights-environment-mitigate-latency.md
-        - name: Understand data retention
-          href: time-series-insights-concepts-retention.md
-        - name: Diagnose and troubleshoot
-          href: time-series-insights-diagnose-and-solve-problems.md
-
-    - name: Azure Time Series Insights V2 Update
-      items:
-      - name: Plan your environment
-        href: time-series-insights-update-plan-environment.md
-      - name: Data Storage and ingress
-        href: time-series-insights-storage-ingress.md
-
-    - name: Develop
-      items:
-      - name: Authenticate and authorize
-        href: time-series-insights-authentication-and-authorization.md
-      - name: Query data using C#
-        href: time-series-insights-query-data-csharp.md
-      - name: Manage reference data in C#
-        href: time-series-insights-manage-reference-data-csharp.md
-      - name: Share a custom view
-        href: time-series-insights-parameterized-urls.md
+  - name: Azure Time Series Insights
+    items:
+    - name: Plan your environment
+      href: time-series-insights-environment-planning.md
+    - name: Visualize data in the explorer
+      href: time-series-insights-explorer.md
+    - name: Mitigate throttling
+      href: time-series-insights-environment-mitigate-latency.md
+    - name: Understand data retention
+      href: time-series-insights-concepts-retention.md
+    - name: Diagnose and troubleshoot
+      href: time-series-insights-diagnose-and-solve-problems.md
+  - name: Azure Time Series Insights V2 Update
+    items:
+    - name: Plan your environment
+      href: time-series-insights-update-plan-environment.md
+    - name: Data Storage and ingress
+      href: time-series-insights-update-storage-ingress.md
+    - name: Use cases
+      href: time-series-insights-update-use-cases.md
+    - name: Time Series Model
+      href: time-series-insights-update-tsm.md
+    - name: Time Series Query
+      href: time-series-insights-update-tsq.md
+    - name: Visualize data in the explorer update
+      href: time-series-insights-update-explorer.md
+  - name: Develop
+    items:
+    - name: Authenticate and authorize
+      href: time-series-insights-authentication-and-authorization.md
+    - name: Query data using C#
+      href: time-series-insights-query-data-csharp.md
+    - name: Manage reference data in C#
+      href: time-series-insights-manage-reference-data-csharp.md
+    - name: Share a custom view
+      href: time-series-insights-parameterized-urls.md
 - name: How-to guides
   items:
   - name: Create an environment
@@ -82,18 +89,39 @@
 
   - name: Azure Time Series Insights V2 Update
     items:
-      - name: Shaping events
-        href: time-series-insights-update-how-to-shape-events.md
-      - name: Diagnose and troubleshoot
-        href: time-series-insights-update-how-to-troubleshoot.md
-
+    - name: Shaping events
+      href: time-series-insights-update-how-to-shape-events.md
+    - name: Diagnose and troubleshoot
+      href: time-series-insights-update-how-to-troubleshoot.md
+    - name: Shaping events
+      href: time-series-insights-update-how-to-shape-events.md
+    - name: Diagnose and troubleshoot
+      href: time-series-insights-update-how-to-troubleshoot.md
 
 - name: Reference
   items:
-  - name: Query API
-    href: /rest/api/time-series-insights/time-series-insights-reference-queryapi
-  - name: Query syntax
-    href: /rest/api/time-series-insights/time-series-insights-reference-query-syntax
+  - name: Time Series Insights 
+    items:
+    - name: Time Series Insights GA
+      items:
+      - name: Query
+        items:
+        - name: API
+          href: /rest/api/time-series-insights/time-series-insights-reference-queryapi
+        - name: Syntax
+          href: /rest/api/time-series-insights/time-series-insights-reference-query-syntax
+      - name: Reference Data API
+        items:
+   - name: Azure Time Series Insights V2 Update
+      items:
+        - name: Time Series Query
+          href: 
+        - name: Time Series Model
+          href: 
+        - name: Time Series Environment API
+          href: 
+        - name: Time Series Expression and Syntax
+          href: 
 - name: Related
   items:
   - name: Solutions
