--- a/articles/azure-functions/durable/TOC.yml
+++ b/articles/azure-functions/durable/TOC.yml
@@ -12,6 +12,7 @@
   items:
   - name: Create durable function - C#
     href: durable-functions-create-first-csharp.md
+    displayName: get started, chaining
   - name: Create durable function - JavaScript
 - name: Tutorials
   items:
