--- a/articles/azure-monitor/index.yml
+++ b/articles/azure-monitor/index.yml
@@ -11,11 +11,19 @@ metadata:
   ms.tgt_pltfrm: na
   ms.devlang: na
   ms.topic: landing-page
-  ms.date: 09/04/2018
+  ms.date: 11/26/2018
   ms.author: bwren
 abstract:
   description:  Azure Monitor, which now includes Log Analytics and Application Insights, provides sophisticated tools for collecting and analyzing telemetry that allow you to maximize the performance and availability of your cloud and on-premises resources and applications. It helps you understand how your applications are performing and proactively identifies issues affecting them and the resources they depend on.
   sections:
+- title: Learn more
+  items:
+  - type: paragraph
+    text: Learn more about Log Analytics and Application Insights.
+  - type: list
+    style: ordered
+    items:
+    - html: <a href="/azure/azure-monitor/azure-monitor-log-index>Learn more about Log Analytics</a>
 - title: 5-Minute Quickstarts
   items:
   - type: paragraph
