--- a/articles/aks/TOC.yml
+++ b/articles/aks/TOC.yml
@@ -83,7 +83,7 @@
     - name: Use Virtual Kubelet
       href: virtual-kubelet.md
     - name: Use Cluster Autoscaler
-      href: autoscaler.md
+      href: cluster-autoscaler.md
     - name: Deploy AKS with Terraform
       href: ../terraform/terraform-create-k8s-cluster-with-tf-and-aks.md
       maintainContext: true
