updated landing page

--- a/articles/azure-monitor/index.yml
+++ b/articles/azure-monitor/index.yml
@@ -16,14 +16,15 @@ metadata:
 abstract:
   description: Azure Monitor, which now includes Log Analytics and Application Insights, provides sophisticated tools for collecting and analyzing telemetry that allow you to maximize the performance and availability of your cloud and on-premises resources and applications. It helps you understand how your applications are performing and proactively identifies issues affecting them and the resources they depend on.
 sections:
-- title: Learn more
+- title: Learn More
   items:
   - type: paragraph
-    text: Learn more about Log Analytics and Application Insights.
+    text: Use the following links to see content releated to Log Analytics and Application Insights.
+  - type: list
     style: unordered
     className: spaced noBullet
     items:
-    - html: <a href="/azure/azure-monitor/azure-monitor-log-hub">Learn more about Log Analytics</a>
+    - html: <a href="/azure/azure-monitor/azure-monitor-log-hub">Log Analytics</a>
 - title: 5-Minute Quickstarts
   items:
   - type: paragraph
