--- a/articles/time-series-insights/TOC.yml
+++ b/articles/time-series-insights/TOC.yml
@@ -7,28 +7,32 @@
   - name: About Time Series Insights
     href: time-series-insights-overview.md
 - name: Quickstarts
-  items:
-  - name: Explore Time Series Insights
-    href: time-series-quickstart.md
-  - name: Azure Time Series Insights V2 Update
+  ieems:
+  - name: Azure Time Series Insights (GA)
     items:
-    - name: Explore the Azure Time Series Insights V2 Update
+    - name: Explore Time Series Insights
+      href: time-series-quickstart.md
+  - name: Azure Time Series Insights update (preview)
+    items:
+    - name: Explore the Azure Time Series Insights Update
       href: time-series-insights-update-quickstart.md
 - name: Tutorials
   items:
-  - name: Explore TSI JavaScript client library
-    href: tutorial-explore-js-client-lib.md
-  - name: Create a TSI environment
-    href: tutorial-create-populate-tsi-environment.md
-  - name: Create a TSI single-page web app
-    href: tutorial-create-tsi-sample-spa.md
-  - name: Azure Time Series Insights V2 Update
+  - name: Azure Time Series Insights (GA)
+    items:
+    - name: Explore TSI JavaScript client library
+      href: tutorial-explore-js-client-lib.md
+    - name: Create a TSI environment
+      href: tutorial-create-populate-tsi-environment.md
+    - name: Create a TSI single-page web app
+      href: tutorial-create-tsi-sample-spa.md
+  - name: Azure Time Series Insights update (preview)
     items:
     - name: Create a TSI environment
       href: time-series-insights-update-create-environment.md
 - name: Concepts
   items:
-  - name: Azure Time Series Insights
+  - name: Azure Time Series Insights (GA)
     items:
     - name: Plan your environment
       href: time-series-insights-environment-planning.md
@@ -40,7 +44,7 @@
       href: time-series-insights-concepts-retention.md
     - name: Diagnose and troubleshoot
       href: time-series-insights-diagnose-and-solve-problems.md
-  - name: Azure Time Series Insights V2 Update
+  - name: Azure Time Series Insights update (preview)
     items:
     - name: Plan your environment
       href: time-series-insights-update-plan.md
@@ -66,27 +70,29 @@
       href: time-series-insights-parameterized-urls.md
 - name: How-to guides
   items:
-  - name: Create an environment
-    href: time-series-insights-get-started.md
-  - name: Grant data access
-    href: time-series-insights-data-access.md
-  - name: Connect to Event Hub
-    href: time-series-insights-how-to-add-an-event-source-eventhub.md
-  - name: Connect to IoT Hub
-    href: time-series-insights-how-to-add-an-event-source-iothub.md
-  - name: Configure data retention
-    href: time-series-insights-how-to-configure-retention.md
-  - name: Create a reference data set
-    href: time-series-insights-add-reference-data-set.md
-  - name: Send events
-    href: time-series-insights-send-events.md
-  - name: Scale your environment
-    href: time-series-insights-how-to-scale-your-environment.md
-  - name: Manage resources using templates
-    href: time-series-insights-manage-resources-using-azure-resource-manager-template.md  
-  - name: Shape JSON for queries
-    href: how-to-shape-query-json.md
-  - name: Azure Time Series Insights V2 Update
+  - name: Azure Time Series Insights (GA)
+    items:
+    - name: Create an environment
+      href: time-series-insights-get-started.md
+    - name: Grant data access
+      href: time-series-insights-data-access.md
+    - name: Connect to Event Hub
+      href: time-series-insights-how-to-add-an-event-source-eventhub.md
+    - name: Connect to IoT Hub
+      href: time-series-insights-how-to-add-an-event-source-iothub.md
+    - name: Configure data retention
+      href: time-series-insights-how-to-configure-retention.md
+    - name: Create a reference data set
+      href: time-series-insights-add-reference-data-set.md
+    - name: Send events
+      href: time-series-insights-send-events.md
+    - name: Scale your environment
+      href: time-series-insights-how-to-scale-your-environment.md
+    - name: Manage resources using templates
+      href: time-series-insights-manage-resources-using-azure-resource-manager-template.md  
+    - name: Shape JSON for queries
+      href: how-to-shape-query-json.md
+  - name: Azure Time Series Insights update (preview)
     items:
     - name: Create an environment
       href: time-series-insights-update-create-environment.md
@@ -110,7 +116,7 @@
           href: /rest/api/time-series-insights/time-series-insights-reference-query-syntax
       - name: Reference Data API
         items:
-    - name: Azure Time Series Insights V2 Update
+    - name: Azure Time Series Insights update (preview)
       items:
       - name: Time Series Query
         href: 
