--- a/articles/azure-monitor/index.yml
+++ b/articles/azure-monitor/index.yml
@@ -16,7 +16,7 @@ metadata:
 abstract:
   description: Azure Monitor, which now includes Log Analytics and Application Insights, provides sophisticated tools for collecting and analyzing telemetry that allow you to maximize the performance and availability of your cloud and on-premises resources and applications. It helps you understand how your applications are performing and proactively identifies issues affecting them and the resources they depend on.
 sections:
-- title: Learn More
+- title: Quickly find
   items:
   - type: paragraph
     text: Use the following links to see content releated to Log Analytics and Application Insights.
