--- a/articles/storage/blobs/TOC.yml
+++ b/articles/storage/blobs/TOC.yml
@@ -220,6 +220,17 @@
         href: ../common/storage-analytics.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
       - name: Enable and view metrics (classic)
         href: ../common/storage-enable-and-view-metrics.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+  - name: Compare data transfer solutions
+    items:
+    - name: Large datasets, low network bandwidth
+      href: ../common/storage-solution-large-dataset-low-network.md
+    - name: Large dataset, moderate to high network bandwidth
+      href: ../common/storage-solution-large-dataset-med-high-network.md
+    - name: Small dataset, low to moderate network bandwidth
+      href: ../common/storage-solution-small-dataset-low-med-network.md
+    - name: Periodic data transfer
+      href: ../common/storage-solution-periodic-data-transfer.md
+
   - name: Import/Export data
     href: ../common/storage-import-export-service.md
     items: 
