--- a/articles/storage/blobs/TOC.yml
+++ b/articles/storage/blobs/TOC.yml
@@ -221,6 +221,7 @@
       - name: Enable and view metrics (classic)
         href: ../common/storage-enable-and-view-metrics.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
   - name: Compare data transfer solutions
+    href: storage-choose-data-transfer-solution.md
     items:
     - name: Large datasets, low network bandwidth
       href: ../common/storage-solution-large-dataset-low-network.md
@@ -230,7 +231,6 @@
       href: ../common/storage-solution-small-dataset-low-med-network.md
     - name: Periodic data transfer
       href: ../common/storage-solution-periodic-data-transfer.md
-
   - name: Import/Export data
     href: ../common/storage-import-export-service.md
     items: 
