New article: Manage tag governance

--- a/articles/governance/policy/toc.yml
+++ b/articles/governance/policy/toc.yml
@@ -28,6 +28,9 @@
   - name: Create a custom policy definition
     displayName: disabled, parameters, rule, mode
     href: ./tutorials/create-custom-policy-definition.md
+  - name: Manage tag governance
+    displayName: modify, append, effects
+    href: ./tutorials/govern-tags.md
   - name: Hands-on Labs - Exploring Azure Policy
     displayName: create, policy, training, learn
     href: https://handsonlabs.microsoft.com/handsonlabs/SelfPacedLabs?storyId=story://content-private/content/sp-azuregovernance/1-azpolicy/a-policy
