--- a/articles/governance/policy/index.yml
+++ b/articles/governance/policy/index.yml
@@ -11,7 +11,7 @@ metadata:
   ms.collection: collection
   author: DCtheGeek
   ms.author: dacoulte
-  ms.date: 09/17/2019
+  ms.date: 11/04/2019
 
 landingContent:
   - title: About Azure Policy
@@ -58,6 +58,8 @@ landingContent:
         links:
           - text: Create a custom policy
             url: ./tutorials/create-custom-policy-definition.md
+          - text: Manage tag governance
+            url: ./tutorials/govern-tags.md
       - linkListType: how-to-guide
         links:
           - text: Create policy with SDK
