--- a/articles/governance/policy/toc.yml
+++ b/articles/governance/policy/toc.yml
@@ -264,8 +264,13 @@
     displayName: audit, enforcementmode, compliance
     href: ./concepts/evaluate-impact.md
   - name: Azure Policy for Kubernetes
-    displayName: aks, rego, k8s, opa, open policy agent, gatekeeper
-    href: ./concepts/rego-for-aks.md
+    items:
+    - name: Policy for AKS
+      displayName: aks, rego, k8s, opa, open policy agent, gatekeeper, v2
+      href: ./concepts/rego-for-aks.md
+    - name: Policy for AKS Engine
+      displayName: aks, k8s, opa, open policy agent, gatekeeper, v3, crd, constraints
+      href: ./concepts/aks-engine.md
   - name: Audit VMs with Guest Configuration
     displayName: provider, tools, definition
     href: ./concepts/guest-configuration.md
