--- a/articles/dev-spaces/toc.yml
+++ b/articles/dev-spaces/toc.yml
@@ -91,6 +91,8 @@
       href: how-to/run-dev-spaces-windows-containers.md
     - name: Use traefik for custom ingress and HTTPS
       href: how-to/ingress-https-traefik.md
+    - name: Use Azure Dev Spaces Connect (preview)
+      href: how-to/connect.md
   - name: Troubleshooting
     href: troubleshooting.md
   - name: FAQ
