--- a/articles/postgresql/TOC.yml
+++ b/articles/postgresql/TOC.yml
@@ -159,6 +159,8 @@
         href: concepts-hyperscale-monitoring.md
     - name: PostgreSQL extensions
       href: concepts-hyperscale-extensions.md
+    - name: High availability
+      href: concepts-hyperscale-high-availability.md
     - name: Resources
       items:
       - name: Configuration options
@@ -261,6 +263,8 @@
       items:
       - name: Create alerts on metrics
         href: howto-hyperscale-alert-on-metric.md
+    - name: High availability
+      href: howto-hyperscale-high-availability.md
 - name: Reference
   items:
   - name: Azure CLI
