--- a/articles/machine-learning/index.yml
+++ b/articles/machine-learning/index.yml
@@ -32,8 +32,8 @@ landingContent:
           - text: Experiment in RStudio
             url: service/tutorial-1st-r-experiment.md
           - text: Experiment using drag & drop designer
-            url: service/ui-tutorial-automobile-price-train-score.md
-          - text: Experiment with automated ML interface
+            url: service/tutorial-designer-automobile-price-train-score.md
+          - text: Automate your first ML experiment
             url: service/tutorial-first-experiment-automated-ml.md
       - linkListType: overview
         links:
@@ -82,7 +82,7 @@ landingContent:
     - linkListType: tutorial
       links:
       - text: Linear regression to predict prices (designer)
-        url: service/ui-tutorial-automobile-price-train-score.md
+        url: service/tutorial-designer-automobile-price-train-score.md
       - text: Create ML pipelines (Python SDK)
         url: service/tutorial-pipeline-batch-scoring-classification.md     
     - linkListType: how-to-guide
