--- a/articles/aks/TOC.yml
+++ b/articles/aks/TOC.yml
@@ -343,6 +343,8 @@
       maintainContext: true
     - name: Deployment Center Launcher
       href: deployment-center-launcher.md 
+    - name: GitHub Actions for Kubernetes
+      href: ../aks/k8s-action.md
   - name: Troubleshoot
     items:
     - name: Common issues
