--- a/articles/virtual-wan/TOC.yml
+++ b/articles/virtual-wan/TOC.yml
@@ -30,6 +30,8 @@
     href: upgrade-virtual-wan.md
   - name: Create a VPN connection over ExpressRoute private peering
     href: vpn-over-expressroute.md
+  - name: Connect a virtual network gateway to Virtual WAN
+    href: connect-virtual-network-gateway-vwan.md
   - name: Configure custom IPsec policy
     href: virtual-wan-custom-ipsec-portal.md
   - name: Configure certificates for user VPN
