addressing robert feedback

--- a/articles/iot-central/government/toc.yml
+++ b/articles/iot-central/government/toc.yml
@@ -1,4 +1,4 @@
-- name: Azure IoT Central Documentation
+- name: Azure IoT Central for Government Documentation
 - name: Overview
   items:
     - name: Building government solutions with Azure IoT Central
