--- a/articles/iot-central/healthcare/toc.yml
+++ b/articles/iot-central/healthcare/toc.yml
@@ -1,4 +1,4 @@
-- name: Azure IoT Central Documentation
+- name: Azure IoT Central for Healthcare Documentation
 - name: Overview
   items:
     - name: Building healthcare solutions with Azure IoT Central
