--- a/articles/iot-central/energy/toc.yml
+++ b/articles/iot-central/energy/toc.yml
@@ -1,4 +1,4 @@
-- name: Azure IoT Central Documentation
+- name: Azure IoT Central for Energy Documentation
 - name: Overview
   items:
     - name: Building energy solutions with Azure IoT Central
