--- a/articles/sql-database-edge/toc.yml
+++ b/articles/sql-database-edge/toc.yml
@@ -21,5 +21,5 @@
     href: stream-analytics.md
 - name: Concepts
   items:
-  - name: Machine learning and artificial intelligence
+  - name: Machine learning and AI with ONNX
     href: onnx-overview.md
