--- a/articles/cognitive-services/form-recognizer/index.yml
+++ b/articles/cognitive-services/form-recognizer/index.yml
@@ -4,7 +4,7 @@ title: Form Recognizer documentation # < 60 chars
 summary: Azure Form Recognizer is a cognitive service that uses machine learning technology to identify and extract key-value pairs and table data from form documents. It then outputs structured data that includes the relationships in the original file. Unsupervised learning allows the model to understand the layout and relationships between fields and entries without manual data labeling or intensive coding and maintenance.  # < 160 chars
 
 metadata:
-  title: Form Recognizer documentation # Required; page title displayed in search results. Include the brand. < 60 chars.
+  title: Form Recognizer documentation - Quickstarts, Tutorials, API Reference - Azure Cognitive Services | Microsoft Docs # Required; page title displayed in search results. Include the brand. < 60 chars.
   description: Azure Form Recognizer is a cognitive service that uses machine learning technology to identify and extract key-value pairs and table data from form documents. It then outputs structured data that includes the relationships in the original file. Unsupervised learning allows the model to understand the layout and relationships between fields and entries without manual data labeling or intensive coding and maintenance. # Required; article description that is displayed in search results. < 160 chars.
   services: cognitive-services
   ms.service: cognitive-services #Required; service per approved list. service slug assigned to your service by ACOM.
