--- a/articles/iot-central/core/TOC.yml
+++ b/articles/iot-central/core/TOC.yml
@@ -8,7 +8,7 @@
     href: overview-iot-options.md
   - name: Tour of the UI
     href: overview-iot-central-tour.md    
-  - name: Stay Connected
+  - name: Stay connected
     href: concepts-stay-connected.md
 - name: Quickstarts
   expanded: true
