--- a/articles/healthcare-apis/TOC.yml
+++ b/articles/healthcare-apis/TOC.yml
@@ -61,5 +61,5 @@
     href: fhir-faq.md
   - name: Supported features
     href: fhir-features-supported.md
-  - name: Partner Ecosystem
+  - name: Partner ecosystem
     href: partner-ecosystem.md
