--- a/articles/iot-central/energy/toc.yml
+++ b/articles/iot-central/energy/toc.yml
@@ -1,4 +1,5 @@
 - name: Azure IoT Central for Energy Documentation
+  href: index.yml
 - name: Overview
   items:
     - name: Building energy solutions with Azure IoT Central
