--- a/articles/iot-central/government/toc.yml
+++ b/articles/iot-central/government/toc.yml
@@ -1,4 +1,5 @@
 - name: Azure IoT Central for Government Documentation
+  href: index.yml
 - name: Overview
   items:
     - name: Building government solutions with Azure IoT Central
