--- a/articles/iot-central/retail/toc.yml
+++ b/articles/iot-central/retail/toc.yml
@@ -1,4 +1,5 @@
 - name: Azure IoT Central for Retail Documentation
+  href: index.yml
 - name: Overview
   items:
     - name: Building retail solutions with Azure IoT Central
