toc and landing page

--- a/articles/firewall-manager/index.yml
+++ b/articles/firewall-manager/index.yml
@@ -39,8 +39,12 @@ landingContent:
     linkLists:
     - linkListType: concept
       links:
-        - text: What are trusted security partners?
+        - text: What are trusted security partners (preview)?
           url: trusted-security-partners.md
+    - linkListType: how-to-guide
+      links:
+       - text: Deploy a trusted security partner (preview)
+         url: deploy-trusted-security-partner.md
   # Card
   - title: Secure you Azure cloud network
     linkLists:
