--- a/articles/sql-database-edge/toc.yml
+++ b/articles/sql-database-edge/toc.yml
@@ -9,6 +9,8 @@
   items:
   - name: Deploy SQL Database Edge
     href: deploy-portal.md 
+  - name: Deploy ONNX on SQL Database Edge
+    href: deploy-onnx.md 
 - name: Tutorials
   items:
   - name: Sync data with Azure Data Factory
