add waf policy with existing gateway

--- a/articles/web-application-firewall/toc.yml
+++ b/articles/web-application-firewall/toc.yml
@@ -72,6 +72,8 @@
        href: ./ag/create-custom-waf-rules.md
      - name: Bot protection
        href: ./ag/bot-protection.md
+     - name: Associate a policy with an existing Application Gateway
+       href: ./ag/waf-policy-with-existing-gateway.md
      - name: Diagnostic logs
        href: ./ag/web-application-firewall-logs.md
      - name: Troubleshoot WAF
