--- a/articles/hpc-cache/toc.yml
+++ b/articles/hpc-cache/toc.yml
@@ -43,3 +43,5 @@
     href: hpc-cache-support-ticket.md
   - name: Recover from a regional outage
     href: hpc-region-recovery.md
+  - name: Use Azure NetApp Files with Azure HPC Cache
+    href: hpc-cache-netapp.md
