--- a/articles/active-directory/user-help/toc.yml
+++ b/articles/active-directory/user-help/toc.yml
@@ -60,10 +60,12 @@
     href: my-account-portal-overview.md
   - name: Manage your security info
     href: user-help-security-info-overview.md
+  - name: Manage your connected devices
+    href: my-account-portal-devices-page.md    
   - name: Manage your organizations
     href: my-account-portal-organizations-page.md
-  - name: Manage your connected devices
-    href: my-account-portal-devices-page.md
+  - name: Change your password
+    href: my-account-change-password-page.md
   - name: View your privacy-related info
     href: my-account-portal-privacy-page.md
 - name: Security info (preview) help
