--- a/articles/cognitive-services/Face/index.yml
+++ b/articles/cognitive-services/Face/index.yml
@@ -66,7 +66,7 @@ landingContent:
     linkLists:
       - linkListType: tutorial
         links:
-          - text: Display face data in a WFP app
+          - text: Display face data in a WPF app
             url: Tutorials/FaceAPIinCSharpTutorial.md
           - text: Display face data in an Android app
             url: Tutorials/FaceAPIinJavaForAndroidTutorial.md
